<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>club.dawdler</groupId>
		<artifactId>dawdler-service-plug</artifactId>
		<version>0.0.6-jdk21-RELEASES</version>
	</parent>
	<artifactId>dawdler-client-plug-local-service</artifactId>
	<name>dawdler-client-plug-local-service</name>
	<packaging>jar</packaging>
	<dependencies>
		<dependency>
			<groupId>club.dawdler</groupId>
			<artifactId>dawdler-client-plug-web</artifactId>
		</dependency>
		<dependency>
			<groupId>club.dawdler</groupId>
			<artifactId>dawdler-local-service-core</artifactId>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
					<source>21</source>
					<target>21</target>
					<compilerArgs>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.loader=dawdler.util</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>